unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/litify_time__lit_Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <label>Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>