unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/lit_Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>lit_Billing_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Code</label>
    <referenceTo>litify_time__lit_Billing_Code__c</referenceTo>
    <relationshipName>TimeEntryBillingCodes</relationshipName>
    <type>Lookup</type>
</CustomField>