unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/lit_Intake__c.field-meta.xml
<CustomField>
    <fullName>lit_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipName>TimeEntryIntakes</relationshipName>
    <type>Lookup</type>
</CustomField>