unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/lit_Matter__c.field-meta.xml
<CustomField>
    <fullName>lit_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipName>TimeEntryMatters</relationshipName>
    <type>Lookup</type>
</CustomField>