unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/lit_Party__c.field-meta.xml
<CustomField>
    <fullName>lit_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TimeEntryParties</relationshipName>
    <type>Lookup</type>
</CustomField>