unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Amount__c</fullName>
    <formula>MAX(0,IF(litify_time__lit_Amount_Override__c = 0, /* NULL currency fields evaluate to 0 in formulas */
                CASE(litify_time__lit_Rate__r.litify_time__lit_Rate_Type__c, 
                &#39;Hourly&#39;, (litify_time__lit_Billing_Duration__c / 3600) * litify_time__lit_Billing_Rate__c,
                &#39;Fixed&#39;, litify_time__lit_Billing_Rate__c, 
                &#39;Flat Fee&#39;, litify_time__lit_Billing_Rate__c,
                0
                ),
                litify_time__lit_Amount_Override__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>