unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Amount_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Amount_After_Discount__c</fullName>
    <formula>MAX(0,litify_time__lit_Amount__c - litify_time__lit_Discount__c)</formula>
    <label>Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>