unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billed_Amount__c</fullName>
    <formula>MAX(0,IF( litify_time__lit_Billable__c == true, 
(litify_time__lit_Amount__c - litify_time__lit_Discount__c - litify_time__lit_Write_Off_Amount__c -  litify_time__lit_Writedown_Amount__c ), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>