unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billed_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billed_Duration__c</fullName>
    <formula>IF( litify_time__lit_Billable__c = true , litify_time__lit_Billing_Duration__c - litify_time__lit_Duration_Markdown__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>