unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billing_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Duration__c</fullName>
    <label>Rounded Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>