unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billing_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Duration_Hours__c</fullName>
    <formula>BLANKVALUE( litify_time__lit_Billed_Duration__c , 0) / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>