unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billing_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Duration_Time__c</fullName>
    <formula>LPAD(TEXT(FLOOR( BLANKVALUE(litify_time__lit_Billed_Duration__c, 0) /3600)), 2, &#39;0&#39;) + &quot;:&quot; + LPAD(TEXT( FLOOR(MOD(BLANKVALUE(litify_time__lit_Billed_Duration__c, 0),3600)/60)), 2, &#39;0&#39;) + &quot;:&quot; +   LPAD(TEXT(MOD(MOD(BLANKVALUE(litify_time__lit_Billed_Duration__c, 0),3600),60)), 2, &#39;0&#39;)</formula>
    <label>Billing Duration (Time)</label>
    <type>Text</type>
</CustomField>