unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Rate__c</fullName>
    <formula>MAX(0,litify_time__lit_Applied_Rate__c -  litify_time__lit_Rate_Markdown__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>