unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Status__c</fullName>
    <label>Billing Status (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Billed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Work in Progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>