unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Category__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Document Review</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Court Appearance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>