unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>