unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>