unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>