unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Duration_Markdown__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Duration_Markdown__c</fullName>
    <label>Duration Markdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>