unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Last_Start_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Last_Start_Timestamp__c</fullName>
    <label>Last Start Timestamp</label>
    <type>DateTime</type>
</CustomField>