unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Narrative__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Narrative__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>