unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Original_Amount__c</fullName>
    <formula>IF(OR(    
                        ISPICKVAL(litify_time__lit_Rate__r.litify_time__lit_Rate_Type__c, &#39;Fixed&#39;), 
                        ISPICKVAL(litify_time__lit_Rate__r.litify_time__lit_Rate_Type__c, &#39;Flat Fee&#39;)
                    ),
                litify_time__lit_Applied_Rate__c,
                litify_time__lit_Applied_Rate__c * litify_time__lit_Billing_Duration__c/3600
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>