unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>litify_time__lit_Time_Rate__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>lit_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>