unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Rounding_Interval__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rounding_Interval__c</fullName>
    <label>Rounding Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_time__lit_Rounding_Interval</valueSetName>
    </valueSet>
</CustomField>