unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Show_on_Bill__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Show_on_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Bill</label>
    <type>Checkbox</type>
</CustomField>