unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Task_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Task_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>litify_time__lit_Billing_Code__c.litify_time__lit_Type__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_time__lit_Billing_Code__c</referenceTo>
    <relationshipLabel>Task Codes</relationshipLabel>
    <relationshipName>lit_Task_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>