unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code</label>
    <referenceTo>litify_time__lit_Tax_Code__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>