unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/fields/litify_time__lit_Write_Off_Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Write_Off_Notes__c</fullName>
    <label>Write Off Notes</label>
    <length>254</length>
    <type>Text</type>
</CustomField>