unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/validationRules/litify_time__Discount_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Discount_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Discount percentage cannot be negative</description>
    <errorConditionFormula>litify_time__lit_Discount_Percent__c &lt; 0</errorConditionFormula>
    <errorMessage>Discount percentage cannot be negative</errorMessage>
</ValidationRule>