unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/validationRules/litify_time__Discount_cannot_be_over_100_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Discount_cannot_be_over_100_Percent</fullName>
    <active>true</active>
    <description>Discount percentage cannot be greater than 100%</description>
    <errorConditionFormula>litify_time__lit_Discount_Percent__c &gt; 1</errorConditionFormula>
    <errorMessage>Discount percentage cannot be greater than 100%</errorMessage>
</ValidationRule>