unpackaged/main/default/objects/litify_time__lit_Time_Entry__c/validationRules/litify_time__Duration_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Duration_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Duration cannot be negative</description>
    <errorConditionFormula>litify_time__lit_Duration__c &lt; 0</errorConditionFormula>
    <errorMessage>Duration cannot be negative.</errorMessage>
</ValidationRule>